--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.12.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.20.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
-    "react-baraja-js": "^1.1.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^6.10.0",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
-    "react-svg": "^16.1.11",
+    "react-widgets": "^5.8.4",
+    "socket.io-client": "^4.6.1",
+    "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
